added Farfield Boxers link to work page

--- a/work.html
+++ b/work.html
@@ -84,7 +84,7 @@
 							</div><!--box-1 end-->
 							<div class="col-xs-12 col-sm-6 col-md-3" id="box-2">
 								<div class="image second" id="1">
-									<a href="#" title="Click here to check out Farfield Boxers!" id="image-second">Farfield Boxers</a>
+									<a href="http://farfieldboxers.bitballoon.com" title="Click here to check out Farfield Boxers!" id="image-second">Farfield Boxers</a>
 								</div>
 							</div><!--box-2 end-->
 							<div class="col-xs-12 col-sm-6 col-md-3" id="box-3">
