--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 				<h1>About Me</h1>
 				<p>Find out all about me</p>
 			</content>
-	    	<img src="img/about-garden.jpg">
+	    	<img src="img/Optimized-about-garden.jpg">
 			<nav>
 				<ul>
 				  <li><a href="index.html">Home</span></a></li>
