--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
 				<h1>Contact Me</h1>
 				<p>Like what you see? Give me a shout!</p>
 			</content>
-	    	<img src="img/red-phone-box-bw.jpg">
+	    	<img src="img/Optimized-red-phone-box-bw.jpg">
 			<nav>
 				<ul>
 				  <li><a href="index.html">Home</span></a></li>
