--- a/work.html
+++ b/work.html
@@ -46,7 +46,7 @@
 				<h1>My Work</h1>
 				<p>Check out my current projects</p>
 			</content>
-	    	<img src="img/laptop_bw.jpeg">
+	    	<img src="img/Optimized-laptop_bw.jpeg">
 			<nav>
 				<ul>
 				  <li><a href="index.html">Home</span></a></li>
@@ -65,22 +65,22 @@
 		          <div class="row" id="my-work">
 		            <div class="col-md-6 col-lg-6 col-sm-12" id="whiteleyContent">
 		              <div class="image-wrapper" id="whiteley">
-		                <a href="http://thewhiteleycollection.herokuapp.com/"><span class="image-overlay">
+		                <a href="http://thewhiteleycollection.herokuapp.com/" target="_blank"><span class="image-overlay">
 		                  <span class="content" id="the-whiteley-collection"></span>
 		                </span></a>
 		              </div>
 		            </div>
 		            <div class="col-md-6 col-lg-6 col-sm-12" id="farfieldContent">
 		              <div class="image-wrapper" id="farfield">
-		                <a href="http://farfieldboxers.bitballoon.com"><span class="image-overlay" id="Farfield">
+		                <a href="http://farfieldboxers.bitballoon.com" target="_blank"><span class="image-overlay" id="Farfield">
 		                  <span class="content" id="farfield-boxers"></span>
 		                </span></a>
 		              </div>
 		            </div>
-		            <div class="col-md-6 col-lg-6 col-sm-12" id="comingSoonContent">
-		              <div class="image-wrapper" id="proj-3">
-		                <a href="Optimized-work-in-progress2.jpg"><span class="image-overlay">
-		                  <span class="content" id="project-3"></span>
+		            <div class="col-md-6 col-lg-6 col-sm-12" id="javaScriptContent">
+		              <div class="image-wrapper" id="javaScript">
+		                <a href="https://github.com/cj11489/JavaScript-Files" target="_blank"><span class="image-overlay">
+		                  <span class="content" id="javaScript">JavaScript</span>
 		                </span></a>
 		              </div>
 		            </div>
