updated CV, minor corrections to spelling. change careers to change career

--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
 		            <div class="intro-column">
 		              <p>Let me introduce myself properly. <strong>I'm Chris Joiner.</strong></p>
 		              <p>I'm a Junior Web Developer based in Birmingham, England.</p>
-		              <p>I decided to change careers and become a Web Developer in September 2015 and it was the best decision I have made!</p>
+		              <p>I decided to change career and become a Web Developer in September 2015 and it was the best decision I have made!</p>
 		            </div>
 		        </article>
 
@@ -121,7 +121,7 @@
 		            		<div class="col-md-8 col-lg-8 col-sm-12" id="about-cv">
 						        <div class="about-main-text" id="more_about_me">
 									<h2>Whats next?</h2>
-									<p>I have been training as a web developer for the past 8 months. I have completed a course with Career Foundry and am now looking for a Front End Web Developer role in Birmingham.</p><br>
+									<p>I have been training as a web developer since September 2015. I have completed a course with Career Foundry and am now looking for a Front End Web Developer role in Birmingham.</p><br>
 									<p>Given my eagerness to learn I know that if given the chance I will excel at it. I am currently looking specifically at Front End Developer roles as this is where my skill set is currently strongest. That said, my ambition is to become a Full Stack Web Developer.</p><br>
 									<p>Check out the 'My Work' section of this site for projects I have completed and am currently working on. For more details about me, check out my CV below:</p>
 									
