--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <content>
                 <h2>What's next?</h2><hr></br>
                 <p>Get a job!</p></br>
-                <p>I made the decision to switch careers and move into web development; now that I have completed the Career Foundry course, my aim is to get a Front End Web Developer role, where I will be able to build upon what I have learnt and develop my knowledge so I can become a full stack web developer. Having worked in other areas I have developed a wide range of diverse skills that will all strongly benefit me in my new role.</p></br> 
+                <p>I made the decision to change career and move into web development; now that I have completed the Career Foundry course, my aim is to get a Front End Web Developer role, where I will be able to build upon what I have learnt and develop my knowledge so I can become a full stack web developer. Having worked in other areas I have developed a wide range of diverse skills that will all strongly benefit me in my new role.</p></br> 
                 <p>Check out my CV by clicking the link below</p><br>
                 <a href="about.html#more_about_me" <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Check out my CV!">View my CV</button></a>
               </content>
