added link to github and MTD.bitballoon.com in my work section - Moved nav bar above main header img

--- a/work.html
+++ b/work.html
@@ -46,7 +46,6 @@
 				<h1>My Work</h1>
 				<p>Check out my current projects</p>
 			</content>
-	    	<img src="img/Optimized-laptop_bw.jpeg">
 			<nav>
 				<ul>
 				  <li><a href="index.html">Home</span></a></li>
@@ -56,6 +55,7 @@
 				  <li><a href="FAQ.html">FAQ</a></li>
 				</ul>
 			</nav>
+	    	<img src="img/Optimized-laptop_bw.jpeg">
 	    </header>
 
 		<div class="mainContent">
@@ -84,13 +84,20 @@
 		                </span></a>
 		              </div>
 		            </div>
-		            <div class="col-md-6 col-lg-6 col-sm-12" id="comingSoonContent">
-		              <div class="image-wrapper" id="proj-4">
-		                <a href="Optimized-work-in-progress2.jpg"><span class="image-overlay">
-		                  <span class="content" id="project-4"></span>
+		            <div class="col-md-6 col-lg-6 col-sm-12" id="gitHubContent">
+		              <div class="image-wrapper" id="gitHub">
+		                <a href="https://github.com/cj11489" target="_blank"><span class="image-overlay">
+		                  <span class="content" id="gitHub">GitHub Profile</span>
 		                </span></a>
 		              </div>
-		            </div>            
+		            </div>     
+		            <div class="col-md-6 col-lg-6 col-sm-12" id="MTDContent">
+		              <div class="image-wrapper" id="MTD">
+		                <!--<a href="#" target="_blank"><span class="image-overlay">-->
+		                  <span class="content" id="MTD">Coming Soon</span>
+		                </span></a>
+		              </div>
+		            </div>        
 		          </div>
 		        </article>				
 			</div>
