modified GitHub link name in my work section

--- a/work.html
+++ b/work.html
@@ -87,7 +87,7 @@
 		            <div class="col-md-6 col-lg-6 col-sm-12" id="gitHubContent">
 		              <div class="image-wrapper" id="gitHub">
 		                <a href="https://github.com/cj11489" target="_blank"><span class="image-overlay">
-		                  <span class="content" id="gitHub">GitHub Profile</span>
+		                  <span class="content" id="gitHub">My GitHub</span>
 		                </span></a>
 		              </div>
 		            </div>     
