added link to MTD in work section, added media query for large wide screens upto 1880px to reduce body width

--- a/work.html
+++ b/work.html
@@ -93,8 +93,8 @@
 		            </div>     
 		            <div class="col-md-6 col-lg-6 col-sm-12" id="MTDContent">
 		              <div class="image-wrapper" id="MTD">
-		                <!--<a href="#" target="_blank"><span class="image-overlay">-->
-		                  <span class="content" id="MTD">Coming Soon</span>
+		                <a href="http://mtd.bitballoon.com" target="_blank"><span class="image-overlay">
+		                  <span class="content" id="MTD"></span>
 		                </span></a>
 		              </div>
 		            </div>        
