updated CV and changed trainee web developer to web developer

--- a/about.html
+++ b/about.html
@@ -153,7 +153,7 @@
 		          </div><!--modal header end-->
 		          <div class="modal-body">
 		          	<!--enter text here if required-->
-		            <iframe id="modalframe" src="Docs/Chris Joiner CV.pdf"></iframe>
+		            <iframe id="modalframe" src="Docs/Chris Joiner CV 1.1.pdf"></iframe>
 		          </div><!--modal body end-->
 		        </div><!--modal content end-->
 		      </div><!--modal dialog modal lg end-->
