--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Chris Joiner | Trainee Web Developer</title>
+    <title>Chris Joiner | Web Developer</title>
 
     <!--css files start here-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -62,7 +62,7 @@
                 <h2>About this site...</h2><hr><br>
                 <p>Welcome to my Portfolio site.</p><br>
                 <p>I have included here, everything you need to know about me. If you want to check out my CV, you can do so by navigating to the 'About Me' section and clicking on 'Curriculum Vitae'. If you want to check out my current projects, then scroll on down to the 'My Work' section.</p> <br>
-                <p>I have recently completed the Career Foundry Web Developer course and am now looking to build upon what I have learnt. All new projects will be posted here once complete.</p> <br>
+                <p>I have completed the Career Foundry Web Developer course and am now looking to build upon what I have learnt. All new projects will be posted here once complete.</p> <br>
                 <p>Please feel free to have a look around and if you want to contact me, you can do so under the 'Contact Me' section. I look forward to hearing from you!</p></br>
                 <a href="#aboutContent"<button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Click here to take a look around">Look Around</button></a>
               </content>
@@ -70,8 +70,8 @@
             <div class="col-md-4 col-lg-4 col-sm-12" id="column-2">
               <content>
                 <h2>Career Foundry</h2><hr><br>
-                <p>I have recently completed the Career Foundry Web Developer course over a 6 month period on a part time basis.</p> <br>
-                <p>Throughout the course I have learnt HTML5, CSS3, Ruby on Rails, Github, Javascript, Ajax and much much more, all of which will hopefully be evident throughout this site and also my <a href="http://thewhiteleycollection.herokuapp.com/" target="_blank">Rails App</a></p></br>
+                <p>I have completed the Career Foundry Web Developer course over a 6 month period on a part time basis.</p> <br>
+                <p>Throughout the course I have learnt HTML5, CSS3, Ruby on Rails, Github, Javascript, Ajax and much much more, all of which will hopefully be evident throughout this site.</p></br>
                 <p>Click the link below to see all about the Career Foundry Course</p></br>
                 <a href="http://careerfoundry.com/courses/how-to-become-a-web-developer"<button type="button" class="btn btn-default" target="_blank" data-toggle="tooltip" data-placement="top" title="Check out Career Foundry!">More details</button></a>
               </content>            
