revamp of site. Added bootstrap navbar, removed header images from each page except index, changed shape of work links and page links on index page, changed page links on index page to colors rather than images. Removed FAQ page link

--- a/FAQ.html
+++ b/FAQ.html
@@ -45,22 +45,67 @@
 				<h1>FAQs</h1>
 				<p>Got a question? Check out common questions below</p>
 			</content>
-			<nav>
-				<ul>
-				  <li><a href="index.html">Home</span></a></li>
-				  <li><a href="about.html">About</a></li>
-				  <li><a href="contact.html">Contact</a></li>
-				  <li><a href="work.html">Work</a></li>
-				  <li  class="active"><a href="#">FAQ</a></li>
-				</ul>
+			<nav class="navbar navbar-default">
+				<div class="container-fluid">
+				  <!-- Brand and toggle get grouped for better mobile display -->
+				  <div class="navbar-header">
+				    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+				      <span class="sr-only">Toggle navigation</span>
+				      <span class="icon-bar"></span>
+				      <span class="icon-bar"></span>
+				      <span class="icon-bar"></span>
+				    </button>
+				  </div>
+
+				  <!-- Collect the nav links, forms, and other content for toggling -->
+				  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				    <ul class="nav navbar-nav">
+				      <li><a href="index.html">Home</span></a></li>
+				      <li><a href="about.html">About</a></li>
+				      <li class="active"><a href="#contact">Contact</a></li>
+				      <li><a href="work.html">Work</a></li>
+				      <li><a href="FAQ.html">FAQ</a></li>
+				    </ul>
+				  </div><!-- /.navbar-collapse -->
+				</div><!-- /.container-fluid -->
 			</nav>
-	    	<img src="img/Optimized-question-mark-463497_1920.jpg">
+	    	<!--<img src="img/Optimized-question-mark-463497_1920.jpg">-->
 	    </header>
 
 		<div class="mainContent">
       		<div class="content">
         		<article class="topContent">
 					<div class="panel-group" id="FAQ-accordion">
+					<div class="panel panel-default">
+					  <div class="panel-heading">
+					    <h4 class="panel-title">
+					      <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne"><span class="glyphicon glyphicon-plus"></span>
+					        Why did you get into Web Development?
+					      </a>
+					    </h4>
+					  </div>
+					  <div id="collapseOne" class="panel-collapse collapse">
+					    <div class="panel-body">
+					      It was time for a change; although I was successful in my previous career it wasn't for me. Web development is a much better fit; it is challenging but enjoyable and is a career that I can see myself excelling in, whilst also giving me the opportunity to progress and specialise. 
+					    </div>
+					  </div>
+					</div>
+					<div class="panel panel-default">
+					  <div class="panel-heading">
+					    <h4 class="panel-title">
+					      <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne"><span class="glyphicon glyphicon-plus"></span>
+					        What qualifications do you have?
+					      </a>
+					    </h4>
+					  </div>
+					  <div id="collapseOne" class="panel-collapse collapse">
+					    <div class="panel-body">
+					      - Web Development - Career Foundry 2016
+					      - Masters Degree in Business Management and Marketing - University of East Anglia 2011
+					      - Bachelors Degree in History - University of East Anglia 2010
+					    </div>
+					  </div>
+					</div>
 					<div class="panel panel-default">
 					  <div class="panel-heading">
 					    <h4 class="panel-title">
