--- a/about.html
+++ b/about.html
@@ -46,16 +46,30 @@
 				<h1>About Me</h1>
 				<p>Find out all about me</p>
 			</content>
-			<nav>
-				<ul>
-				  <li><a href="index.html">Home</span></a></li>
-				  <li class="active"><a href="#">About</a></li>
-				  <li><a href="contact.html">Contact</a></li>
-				  <li><a href="work.html">Work</a></li>
-				  <li><a href="FAQ.html">FAQ</a></li>
-				</ul>
+			<nav class="navbar navbar-default">
+				<div class="container-fluid">
+				  <!-- Brand and toggle get grouped for better mobile display -->
+				  <div class="navbar-header">
+				    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+				      <span class="sr-only">Toggle navigation</span>
+				      <span class="icon-bar"></span>
+				      <span class="icon-bar"></span>
+				      <span class="icon-bar"></span>
+				    </button>
+				  </div>
+
+				  <!-- Collect the nav links, forms, and other content for toggling -->
+				  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				    <ul class="nav navbar-nav">
+				      <li><a href="index.html">Home</span></a></li>
+				      <li class="active"><a href="#about">About</a></li>
+				      <li><a href="contact.html">Contact</a></li>
+				      <li><a href="work.html">Work</a></li>
+				    </ul>
+				  </div><!-- /.navbar-collapse -->
+				</div><!-- /.container-fluid -->
 			</nav>
-	    	<img src="img/Optimized-about-garden.jpg">
+	    	<!--<img src="img/Optimized-about-garden.jpg">-->
 	    </header>
 
 		<div class="mainContent">
@@ -80,9 +94,9 @@
 			        				<h2>So what do I know?</h2>
 			        				<p>- HTML5 <i>[Proficient]</i><p>
 			        				<p>- CSS3 <i>[Proficient]</i><p>
-			        				<p>- Ruby on Rails <i>[Learning]</i><p>
 			        				<p>- Javascript <i>[Learning]</i><p>
 			        				<p>- Git <i>[Proficient]</i><p>
+			        				<p>- Ruby on Rails <i>[Learning]</i><p>
 			        				<p>- Bootstrap <i>[Learning]</i><p>
 					        	</article>
 					        </aside>
@@ -95,7 +109,7 @@
 			        				<p>- Organisation<p>
 			        				<p>- Time Management<p>
 			        				<p>- Team Work<p>
-			        				<p>- Attention to Details<p>
+			        				<p>- Attention to Detail<p>
 					        	</article>
 					        </aside>
 	        			</div>
@@ -121,7 +135,7 @@
 		            		<div class="col-md-8 col-lg-8 col-sm-12" id="about-cv">
 						        <div class="about-main-text" id="more_about_me">
 									<h2>Whats next?</h2>
-									<p>I have been training as a web developer since September 2015. I have completed a course with Career Foundry and am now looking for a Front End Web Developer role in Birmingham.</p><br>
+									<p>I have been training as a web developer since October 2015. I have completed a course with Career Foundry and am now looking for a Front End Web Developer role in Birmingham.</p><br>
 									<p>Given my eagerness to learn I know that if given the chance I will excel at it. I am currently looking specifically at Front End Developer roles as this is where my skill set is currently strongest. That said, my ambition is to become a Full Stack Web Developer.</p><br>
 									<p>Check out the 'My Work' section of this site for projects I have completed and am currently working on. For more details about me, check out my CV below:</p>
 									
@@ -133,7 +147,7 @@
 						        </div>
 		            		</div>
 							<div class="col-sm-12 col-md-4 col-lg-4" id="profile-pic">
-								<img src="img/profile_pic_colour.jpeg" alt="Chris Joiner" class="img-responsive" id="profile-pic-image">
+								<img src="img/profilePic.jpg" alt="Chris Joiner" class="img-responsive" id="profile-pic-image">
 							</div><!--col end-->
 						</div><!--row end-->
 					</article>
