--- a/contact.html
+++ b/contact.html
@@ -47,16 +47,30 @@
 				<h1>Contact Me</h1>
 				<p>Like what you see? Give me a shout!</p>
 			</content>
-			<nav>
-				<ul>
-				  <li><a href="index.html">Home</span></a></li>
-				  <li><a href="about.html">About</a></li>
-				  <li class="active"><a href="#">Contact</a></li>
-				  <li><a href="work.html">Work</a></li>
-				  <li><a href="FAQ.html">FAQ</a></li>
-				</ul>
+			<nav class="navbar navbar-default">
+				<div class="container-fluid">
+				  <!-- Brand and toggle get grouped for better mobile display -->
+				  <div class="navbar-header">
+				    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+				      <span class="sr-only">Toggle navigation</span>
+				      <span class="icon-bar"></span>
+				      <span class="icon-bar"></span>
+				      <span class="icon-bar"></span>
+				    </button>
+				  </div>
+
+				  <!-- Collect the nav links, forms, and other content for toggling -->
+				  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				    <ul class="nav navbar-nav">
+				      <li><a href="index.html">Home</span></a></li>
+				      <li><a href="about.html">About</a></li>
+				      <li class="active"><a href="#contact">Contact</a></li>
+				      <li><a href="work.html">Work</a></li>
+				    </ul>
+				  </div><!-- /.navbar-collapse -->
+				</div><!-- /.container-fluid -->
 			</nav>
-	    	<img src="img/Optimized-red-phone-box-bw.jpg">
+	    	<!--<img src="img/Optimized-red-phone-box-bw.jpg">-->
 	    </header>
 
 		<div class="mainContent">
@@ -66,9 +80,9 @@
 		                <div class="col-sm-12 col-md-6 col-lg-6">
 		                  <div class="contact-main-text">
 		                  	<h2>Give me a shout!</h2>
-		                  	<p>You can reach me on the following (although email is probably best!)</p>
-		                    <p><span class="glyphicon glyphicon-earphone"></span>&nbsp; +44(0)7854 420030</p>
+		                  	<p>You can reach me via email or through LinkedIn</p>
 		                    <p><span class="glyphicon glyphicon-envelope"></span>&nbsp; <a href="mailto:cjoiner20@hotmail.co.uk">cjoiner20@hotmail.co.uk</a></p>
+		                    <p><span class="glyphicon glyphicon-link"></span>&nbsp; www.linkedin.com/in/chris-joiner</p>
 		                  </div>
 		                </div>
 		                <div class="col-md-6 col-lg-6 col-sm-12">
