--- a/work.html
+++ b/work.html
@@ -46,52 +46,65 @@
 				<h1>My Work</h1>
 				<p>Check out my current projects</p>
 			</content>
-			<nav>
-				<ul>
-				  <li><a href="index.html">Home</span></a></li>
-				  <li><a href="about.html">About</a></li>
-				  <li><a href="contact.html">Contact</a></li>
-				  <li class="active"><a href="work.html">Work</a></li>
-				  <li><a href="FAQ.html">FAQ</a></li>
-				</ul>
+			<nav class="navbar navbar-default">
+				<div class="container-fluid">
+				  <!-- Brand and toggle get grouped for better mobile display -->
+				  <div class="navbar-header">
+				    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+				      <span class="sr-only">Toggle navigation</span>
+				      <span class="icon-bar"></span>
+				      <span class="icon-bar"></span>
+				      <span class="icon-bar"></span>
+				    </button>
+				  </div>
+
+				  <!-- Collect the nav links, forms, and other content for toggling -->
+				  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				    <ul class="nav navbar-nav">
+				      <li><a href="index.html">Home</span></a></li>
+				      <li><a href="about.html">About</a></li>
+				      <li><a href="contact.html">Contact</a></li>
+				      <li class="active"><a href="#work">Work</a></li>
+				    </ul>
+				  </div><!-- /.navbar-collapse -->
+				</div><!-- /.container-fluid -->
 			</nav>
-	    	<img src="img/Optimized-laptop_bw.jpeg">
+	    	<!--<img src="img/Optimized-laptop_bw.jpeg">-->
 	    </header>
 
 		<div class="mainContent">
       		<div class="content">
 		        <article class="topContent">
-		          <h2>Current Projects:</h2>
 		          <div class="row" id="my-work">
-		            <div class="col-md-6 col-lg-6 col-sm-12" id="whiteleyContent">
+		            <div class="col-md-6 col-lg-4 col-sm-12" id="whiteleyContent">
 		              <div class="image-wrapper" id="whiteley">
 		                <a href="http://thewhiteleycollection.herokuapp.com/" target="_blank"><span class="image-overlay">
 		                  <span class="content" id="the-whiteley-collection"></span>
 		                </span></a>
 		              </div>
 		            </div>
-		            <div class="col-md-6 col-lg-6 col-sm-12" id="farfieldContent">
+		            <div class="col-md-6 col-lg-4 col-sm-12" id="farfieldContent">
 		              <div class="image-wrapper" id="farfield">
 		                <a href="http://farfieldboxers.bitballoon.com" target="_blank"><span class="image-overlay" id="Farfield">
 		                  <span class="content" id="farfield-boxers"></span>
 		                </span></a>
 		              </div>
 		            </div>
-		            <div class="col-md-6 col-lg-6 col-sm-12" id="javaScriptContent">
+		            <div class="col-md-6 col-lg-4 col-sm-12" id="javaScriptContent">
 		              <div class="image-wrapper" id="javaScript">
 		                <a href="https://github.com/cj11489/JavaScript-Files" target="_blank"><span class="image-overlay">
 		                  <span class="content" id="javaScript">JavaScript</span>
 		                </span></a>
 		              </div>
 		            </div>
-		            <div class="col-md-6 col-lg-6 col-sm-12" id="gitHubContent">
+		            <div class="col-md-6 col-lg-4 col-sm-12" id="gitHubContent">
 		              <div class="image-wrapper" id="gitHub">
 		                <a href="https://github.com/cj11489" target="_blank"><span class="image-overlay">
 		                  <span class="content" id="gitHub">My GitHub</span>
 		                </span></a>
 		              </div>
 		            </div>     
-		            <div class="col-md-6 col-lg-6 col-sm-12" id="MTDContent">
+		            <div class="col-md-6 col-lg-4 col-sm-12" id="MTDContent">
 		              <div class="image-wrapper" id="MTD">
 		                <a href="http://mtd.bitballoon.com" target="_blank"><span class="image-overlay">
 		                  <span class="content" id="MTD"></span>
