--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="css/new_style.css">
     <!--css files end here-->
 
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+      <!--JavaScript-->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <!--Tooltips jQuery start here-->
     <script>
       $(function () {
@@ -38,17 +44,31 @@
         <p>Welcome to my portfolio site</p>
       </content>
 
-      <nav>
-        <ul>
-          <li class="active"><a href="#home">Home</span></a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="work.html">Work</a></li>
-          <li><a href="FAQ.html">FAQ</a></li>
-        </ul>
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#home">Home</span></a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="contact.html">Contact</a></li>
+              <li><a href="work.html">Work</a></li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
       </nav>
 
-      <img src="img/laptop-1209008.jpg">
+      <img class="img-fluid" alt="Laptop on desk" src="img/laptop-1209008.jpg">
       
     </header>
 
@@ -60,27 +80,23 @@
             <div class="col-md-4 col-lg-4 col-sm-12" id="column-1">
               <content>
                 <h2>About this site...</h2><hr><br>
-                <p>Welcome to my Portfolio site.</p><br>
-                <p>I have included here, everything you need to know about me. If you want to check out my CV, you can do so by navigating to the 'About Me' section and clicking on 'Curriculum Vitae'. If you want to check out my current projects, then scroll on down to the 'My Work' section.</p> <br>
-                <p>I have completed the Career Foundry Web Developer course and am now looking to build upon what I have learnt. All new projects will be posted here once complete.</p> <br>
-                <p>Please feel free to have a look around and if you want to contact me, you can do so under the 'Contact Me' section. I look forward to hearing from you!</p></br>
+                <p>Welcome to my portfolio site. I am a Front End Web Developer, based in Birmingham, England, looking for a chance to break into the industry. Please take a look around and get in contact if you like what you see.</p> </br> 
                 <a href="#aboutContent"<button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Click here to take a look around">Look Around</button></a>
               </content>
             </div>
             <div class="col-md-4 col-lg-4 col-sm-12" id="column-2">
               <content>
-                <h2>Career Foundry</h2><hr><br>
-                <p>I have completed the Career Foundry Web Developer course over a 6 month period on a part time basis.</p> <br>
-                <p>Throughout the course I have learnt HTML5, CSS3, Ruby on Rails, Github, Javascript, Ajax and much much more, all of which will hopefully be evident throughout this site.</p></br>
-                <p>Click the link below to see all about the Career Foundry Course</p></br>
+                <h2>Experience</h2><hr><br>
+                <p>I turned my hand to web development in October 2015. I trained part time via self study and by completing the Career Foundry Web Developer course.</p> <br>
+                <p>I am proficient with HTML5, CSS3 and GitHub and learning JavaScript. I have also worked with Ruby on Rails and Ajax.</p></br>
+                <p>I have included a link below to the Career Foundry Course, which details the course content.</p></br>
                 <a href="http://careerfoundry.com/courses/how-to-become-a-web-developer"<button type="button" class="btn btn-default" target="_blank" data-toggle="tooltip" data-placement="top" title="Check out Career Foundry!">More details</button></a>
               </content>            
             </div>
             <div class="col-md-4 col-lg-4 col-sm-12" id="column-3">
               <content>
-                <h2>What's next?</h2><hr></br>
-                <p>Get a job!</p></br>
-                <p>I made the decision to change career and move into web development; now that I have completed the Career Foundry course, my aim is to get a Front End Web Developer role, where I will be able to build upon what I have learnt and develop my knowledge so I can become a full stack web developer. Having worked in other areas I have developed a wide range of diverse skills that will all strongly benefit me in my new role.</p></br> 
+                <h2>What am I looking for?</h2><hr></br>
+                <p>I am looking for a Front End Web Developer role, ideally in Birmingham, with the opprotunity to learn and develop the skills I have already gained. I have a Bachelors Degree and a Masters Degree from the University of East Anglia and have worked in various other areas including Project Management for an IT company so I have developed a diverse range of skills that will all strongly benefit me as a Web Developer.</p></br> 
                 <p>Check out my CV by clicking the link below</p><br>
                 <a href="about.html#more_about_me" <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Check out my CV!">View my CV</button></a>
               </content>
@@ -115,7 +131,7 @@
                 <a href="FAQ.html"><span class="image-overlay">
                   <span class="content" id="faq">FAQs</span>
                 </span></a>
-                <img src="img/question-mark-463497_1920.jpg">
+                <!--<img src="img/question-mark-463497_1920.jpg">-->
               </div>
             </div>            
           </div>
