added FAQs back in

--- a/FAQ.html
+++ b/FAQ.html
@@ -93,44 +93,16 @@
 					<div class="panel panel-default">
 					  <div class="panel-heading">
 					    <h4 class="panel-title">
-					      <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne"><span class="glyphicon glyphicon-plus"></span>
-					        What qualifications do you have?
-					      </a>
-					    </h4>
-					  </div>
-					  <div id="collapseOne" class="panel-collapse collapse">
-					    <div class="panel-body">
-					      - Web Development - Career Foundry 2016
-					      - Masters Degree in Business Management and Marketing - University of East Anglia 2011
-					      - Bachelors Degree in History - University of East Anglia 2010
-					    </div>
-					  </div>
-					</div>
-					<div class="panel panel-default">
-					  <div class="panel-heading">
-					    <h4 class="panel-title">
-					      <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne"><span class="glyphicon glyphicon-plus"></span>
-					        Why did you get into Web Development?
-					      </a>
-					    </h4>
-					  </div>
-					  <div id="collapseOne" class="panel-collapse collapse">
-					    <div class="panel-body">
-					      It was time for a change; although I was successful in my previous career it wasn't for me. Web development is a much better fit; it is challenging but enjoyable and is a career that I can see myself excelling in, whilst also giving me the opportunity to progress and specialise. 
-					    </div>
-					  </div>
-					</div>
-					<div class="panel panel-default">
-					  <div class="panel-heading">
-					    <h4 class="panel-title">
 					      <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"><span class="glyphicon glyphicon-plus"></span>
-					        What do you want to do now you have completed the Career Foundry course?
+					        What qualifications do you have?
 					      </a>
 					    </h4>
 					  </div>
 					  <div id="collapseTwo" class="panel-collapse collapse">
 					    <div class="panel-body">
-					      Now I have completed the course, I hope to get a front end web developer role in Birmingham, England and build on the skills and experience I have gained whilst training with a view to progressing to more senior positions.
+					      - Web Development - <b>Career Foundry</b> [2016] </br>
+					      - Masters Degree in Business Management and Marketing - <b>University of East Anglia</b> [2011] </br>
+					      - Bachelors Degree in History - <b>University of East Anglia</b> [2010] </br>
 					    </div>
 					  </div>
 					</div>
@@ -138,11 +110,25 @@
 					  <div class="panel-heading">
 					    <h4 class="panel-title">
 					      <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree"><span class="glyphicon glyphicon-plus"></span>
-					        Why should you hire me?
+					        What role are you looking for?
 					      </a>
 					    </h4>
 					  </div>
 					  <div id="collapseThree" class="panel-collapse collapse">
+					    <div class="panel-body">
+					      Front End Web Developer role, ideally at a company based in Birmingham, England and build on the skills and experience I have gained whilst training with a view to progressing to more senior positions.
+					    </div>
+					  </div>
+					</div>
+					<div class="panel panel-default">
+					  <div class="panel-heading">
+					    <h4 class="panel-title">
+					      <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour"><span class="glyphicon glyphicon-plus"></span>
+					        Why should you hire me?
+					      </a>
+					    </h4>
+					  </div>
+					  <div id="collapseFour" class="panel-collapse collapse">
 					    <div class="panel-body">
 					      I'm hard working, eager to learn and being a career changer, I bring diverse skills and a determination to succeed. <a href="about.html#more_about_me">Click here to check out my CV</a>
 					    </div>
