--- a/about.html
+++ b/about.html
@@ -65,6 +65,7 @@
 				      <li class="active"><a href="#about">About</a></li>
 				      <li><a href="contact.html">Contact</a></li>
 				      <li><a href="work.html">Work</a></li>
+				      <li><a href="FAQ.html">FAQ</a></li>
 				    </ul>
 				  </div><!-- /.navbar-collapse -->
 				</div><!-- /.container-fluid -->
