--- a/contact.html
+++ b/contact.html
@@ -66,6 +66,7 @@
 				      <li><a href="about.html">About</a></li>
 				      <li class="active"><a href="#contact">Contact</a></li>
 				      <li><a href="work.html">Work</a></li>
+				      <li><a href="FAQ.html">FAQ</a></li>
 				    </ul>
 				  </div><!-- /.navbar-collapse -->
 				</div><!-- /.container-fluid -->
