--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
               <li><a href="about.html">About</a></li>
               <li><a href="contact.html">Contact</a></li>
               <li><a href="work.html">Work</a></li>
+              <li><a href="FAQ.html">FAQ</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
