--- a/work.html
+++ b/work.html
@@ -65,6 +65,7 @@
 				      <li><a href="about.html">About</a></li>
 				      <li><a href="contact.html">Contact</a></li>
 				      <li class="active"><a href="#work">Work</a></li>
+				      <li><a href="FAQ.html">FAQ</a></li>
 				    </ul>
 				  </div><!-- /.navbar-collapse -->
 				</div><!-- /.container-fluid -->
