--- a/FAQ.html
+++ b/FAQ.html
@@ -62,9 +62,9 @@
 				    <ul class="nav navbar-nav">
 				      <li><a href="index.html">Home</span></a></li>
 				      <li><a href="about.html">About</a></li>
-				      <li class="active"><a href="#contact">Contact</a></li>
+				      <li><a href="contact.html">Contact</a></li>
 				      <li><a href="work.html">Work</a></li>
-				      <li><a href="FAQ.html">FAQ</a></li>
+				      <li class="active"><a href="#FAQ">FAQ</a></li>
 				    </ul>
 				  </div><!-- /.navbar-collapse -->
 				</div><!-- /.container-fluid -->
