--- a/work.html
+++ b/work.html
@@ -101,7 +101,7 @@
 		            <div class="col-md-6 col-lg-4 col-sm-12" id="gitHubContent">
 		              <div class="image-wrapper" id="gitHub">
 		                <a href="https://github.com/cj11489" target="_blank"><span class="image-overlay">
-		                  <span class="content" id="gitHub">My GitHub</span>
+		                  <span class="content" id="javaScript">My GitHub</span>
 		                </span></a>
 		              </div>
 		            </div>     
