minor change to contact page. Changed h2 header from give me a shout to you can reach me via email or linkedin

--- a/contact.html
+++ b/contact.html
@@ -80,8 +80,7 @@
         			<div class="row">
 		                <div class="col-sm-12 col-md-6 col-lg-6">
 		                  <div class="contact-main-text">
-		                  	<h2>Give me a shout!</h2>
-		                  	<p>You can reach me via email or through LinkedIn</p>
+		                  	<h2>You can reach me via email or through LinkedIn</h2>
 		                    <p><span class="glyphicon glyphicon-envelope"></span>&nbsp; <a href="mailto:cjoiner20@hotmail.co.uk">cjoiner20@hotmail.co.uk</a></p>
 		                    <p><span class="glyphicon glyphicon-link"></span>&nbsp; www.linkedin.com/in/chris-joiner</p>
 		                  </div>
