added Game Time to work page

--- a/work.html
+++ b/work.html
@@ -111,7 +111,14 @@
 		                  <span class="content" id="MTD"></span>
 		                </span></a>
 		              </div>
-		            </div>        
+		            </div>    
+		            <div class="col-md-6 col-lg-4 col-sm-12" id="gameTimeContent">
+		              <div class="image-wrapper" id="gameTime">
+		                <a href="http://gametime.bitballoon.com/" target="_blank"><span class="image-overlay">
+		                  <span class="content" id="gameTime"></span>
+		                </span></a>
+		              </div>
+		            </div>      
 		          </div>
 		        </article>				
 			</div>
